Adds gateway debug

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
 server:
   port: 0
 
+logging:
+  level:
+    org.springframework.cloud.gateway.rsocket: DEBUG
 ---
 spring:
   profiles: pongproxy
