--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,6 +10,13 @@ server:
 logging:
   level:
     org.springframework.cloud.gateway.rsocket: DEBUG
+management:
+  server:
+    port: 18080
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 ---
 spring:
   profiles: pongproxy
@@ -19,3 +26,10 @@ spring:
         id: gateway2
         server:
           port: 7003
+management:
+  server:
+    port: 18081
+  endpoints:
+    web:
+      exposure:
+        include: '*'
