--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,6 +10,7 @@ server:
 logging:
   level:
     org.springframework.cloud.gateway.rsocket: DEBUG
+#    org.springframework.cloud.gateway.rsocket: TRACE
 management:
   server:
     port: 18080
