Updates for spring boot 2.0.0.M5

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -21,12 +21,13 @@ management:
 ---
 spring:
   profiles: pongproxy
+  rsocket:
+    server:
+      port: 7003
   cloud:
     gateway:
       rsocket:
         id: gateway2
-        server:
-          port: 7003
 management:
   server:
     port: 18081
