Updated readme and move config to profiles.
Build also passes without skipping tests.

--- a/pong/src/main/resources/application.yml
+++ b/pong/src/main/resources/application.yml
@@ -1,3 +1,14 @@
 spring.cloud.gateway.rsocket.enabled: false
 server:
   port: 0
+
+---
+spring:
+  profiles: server
+pong:
+  client: false
+
+---
+spring:
+  profiles: pongproxy
+  cloud.gateway.rsocket.server.port: 7003
