--- a/ping/src/main/resources/application.yml
+++ b/ping/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring.cloud.gateway.rsocket.enabled: false
 server:
   port: 0
+
+---
+spring:
+  profiles: ping2
+ping:
+  id: 2
+  request-type: request-response
