Adds composite metadata and spring messaging support.

--- a/pong/src/main/resources/application.yml
+++ b/pong/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring.cloud.gateway.rsocket.enabled: false
 server:
   port: 0
 
+logging:
+  level:
+    org.springframework.messaging.rsocket: INFO
 ---
 spring:
   profiles: server
