--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.0.M5</version>
+		<version>2.2.0.BUILD-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.springframework.cloud.rsocket</groupId>
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<!-- Remove when boot updates -->
-		<rsocket.version>1.0.0-RC2</rsocket.version>
+		<rsocket.version>1.0.0-RC3-SNAPSHOT</rsocket.version>
 		<spring-cloud.version>Hoxton.BUILD-SNAPSHOT</spring-cloud.version>
 	</properties>
 
@@ -116,6 +116,15 @@
 			<url>https://repo.spring.io/release</url>
 			<snapshots>
 				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<!-- RSocket Snapshots -->
+		<repository>
+			<id>jfrog-snapshots</id>
+			<name>JFRog Snapshots</name>
+			<url>https://oss.jfrog.org/artifactory/libs-snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
