--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -17,7 +17,10 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gateway-rsocket-broker</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
