--- a/ping/pom.xml
+++ b/ping/pom.xml
@@ -25,6 +25,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-rsocket</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gateway-rsocket-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
