--- a/pong/pom.xml
+++ b/pong/pom.xml
@@ -26,8 +26,8 @@
 			<artifactId>spring-boot-starter-rsocket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gateway-rsocket-client</artifactId>
 		</dependency>
 	</dependencies>
 
