--- a/pong/src/main/resources/application.yml
+++ b/pong/src/main/resources/application.yml
@@ -1,4 +1,12 @@
-spring.cloud.gateway.rsocket.enabled: false
+spring.cloud.gateway.rsocket.client:
+  route-id: 3
+  service-name: pong
+  tags:
+    INSTANCE_NAME: pong3
+  broker:
+    host: localhost
+    port: 7002
+
 server:
   port: 0
 
@@ -14,4 +22,4 @@ pong:
 ---
 spring:
   profiles: pongproxy
-  cloud.gateway.rsocket.server.port: 7003
+  cloud.gateway.rsocket.client.server.port: 7003
