--- a/ping/src/main/resources/application.yml
+++ b/ping/src/main/resources/application.yml
@@ -7,10 +7,7 @@ spring.cloud.gateway.rsocket.client:
     host: localhost
     port: 7002
 
-server:
-  port: 0
-
-debug: true
+#debug: true
 ---
 spring:
   profiles: ping2
