--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -8,9 +8,9 @@
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>ping</artifactId>
-	<name>ping</name>
-	<description>ping</description>
+	<artifactId>broker</artifactId>
+	<name>broker</name>
+	<description>broker</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -23,13 +23,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.rsocket.routing</groupId>
-			<artifactId>rsocket-routing-client-spring</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<optional>true</optional>
+			<artifactId>rsocket-routing-broker-spring</artifactId>
 		</dependency>
 	</dependencies>
 
