--- a/pong/pom.xml
+++ b/pong/pom.xml
@@ -3,8 +3,8 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.cloud.rsocket</groupId>
-		<artifactId>spring-cloud-gateway-rsocket-sample</artifactId>
+		<groupId>rsocket.routing.sample</groupId>
+		<artifactId>rsocket-routing-sample</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
@@ -19,15 +19,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-rsocket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-rsocket-client</artifactId>
+			<groupId>io.rsocket.routing</groupId>
+			<artifactId>rsocket-routing-client-spring</artifactId>
 		</dependency>
 	</dependencies>
 
