--- a/pong/src/main/resources/application.yml
+++ b/pong/src/main/resources/application.yml
@@ -1,18 +1,15 @@
-spring.cloud.gateway.rsocket.client:
-  route-id: 3
+io.rsocket.routing.client:
+  route-id: 00000000-0000-0000-0000-000000000003
   service-name: pong
   tags:
     INSTANCE_NAME: pong3
-  broker:
-    host: localhost
-    port: 7002
-
-server:
-  port: 0
+  brokers:
+    - host: localhost
+      port: 8002
 
 logging:
   level:
-    org.springframework.messaging.rsocket: INFO
+    io.rsocket.routing.client: INFO
 ---
 spring:
   profiles: server
@@ -22,16 +19,18 @@ pong:
 ---
 spring:
   profiles: pong4
-spring.cloud.gateway.rsocket.client:
-  route-id: 4
+
+io.rsocket.routing.client:
+  route-id: 00000000-0000-0000-0000-000000000004
   service-name: pong
   tags:
     INSTANCE_NAME: pong4
 
 ---
 spring:
-  profiles: gateway2
-  cloud.gateway.rsocket.client:
-    broker:
-      host: localhost
-      port: 7003
+  profiles: broker2
+
+io.rsocket.routing.client:
+  brokers:
+    - host: localhost
+      port: 8003
