--- a/ping/pom.xml
+++ b/ping/pom.xml
@@ -25,7 +25,10 @@
 			<groupId>io.rsocket.routing</groupId>
 			<artifactId>rsocket-routing-client-spring</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>io.rsocket.routing</groupId>
+			<artifactId>rsocket-routing-frames</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
