--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.4.0-M2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>rsocket.routing.sample</groupId>
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<!--<spring-cloud.version>Hoxton.BUILD-SNAPSHOT</spring-cloud.version>-->
-		<rsocket-routing.version>0.0.1-SNAPSHOT</rsocket-routing.version>
+		<rsocket-routing.version>0.0.2-SNAPSHOT</rsocket-routing.version>
 	</properties>
 
 	<modules>
@@ -94,7 +94,7 @@
 		<pluginRepository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/libs-milestone-local</url>
+			<url>https://repo.spring.io/milestone</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -120,7 +120,7 @@
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/libs-milestone-local</url>
+			<url>https://repo.spring.io/milestone</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
