Updates to broker 0.3.0 and boot 2.6
Adjusts to use new uri properties.

--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 io.rsocket.routing.broker:
   broker-id: 00000000-0000-0000-0000-000000000011
-  tcp.port: 8002
-  cluster.tcp.port: 7002
+  uri: tcp://localhost:8002
+  cluster.uri: tcp://localhost:7002
 
 logging:
   level:
@@ -12,13 +12,8 @@ spring.config.activate.on-profile: broker2
 
 io.rsocket.routing.broker:
   broker-id: 00000000-0000-0000-0000-000000000012
-  tcp.port: 8003
-  cluster.tcp:
-    port: 7003
+  uri: tcp://localhost:8003
+  cluster.uri: tcp://localhost:7003
   brokers:
-    - cluster.tcp:
-        host: localhost
-        port: 7002
-      proxy.tcp:
-        host: localhost
-        port: 8002
+    - cluster: tcp://localhost:7002
+      proxy: tcp://localhost:8002
