--- a/broker/pom.xml
+++ b/broker/pom.xml
@@ -3,8 +3,8 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>rsocket.routing.sample</groupId>
-		<artifactId>rsocket-routing-sample</artifactId>
+		<groupId>rsocket.broker.sample</groupId>
+		<artifactId>rsocket-broker-sample</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
@@ -22,8 +22,8 @@
 			<artifactId>spring-boot-starter-rsocket</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.rsocket.routing</groupId>
-			<artifactId>rsocket-routing-broker-spring</artifactId>
+			<groupId>io.rsocket.broker</groupId>
+			<artifactId>rsocket-broker-spring</artifactId>
 		</dependency>
 	</dependencies>
 
